fix issues sonarqube mappers